2009-01-18  Zoltan Varga  <vargaz@gmail.com>

	* include/private/gcconfig.h: Applied patch from Koushik Dutta
	(koush@koushikdutta.com). Define SEARCH_FOR_DATA_START for android.

2008-11-18  Mark Probst  <mark.probst@gmail.com>

	* include/private/gc_locks.h (test_and_set): The PPC64 case is
	wrong, as it operates on 64 bit values, not on 32 bit ones as the
	function requires.  The PPC32 case is sufficient.

2008-09-29  Geoff Norton  <gnorton@novell.com>

	* include/private/gcconfig.h: Make Darwin/ARM use mmap() instead of
	sbrk() for its allocator implementation.

2008-08-28  Geoff Norton  <gnorton@novell.com>

	* darwin_stop_world.c:
	* include/private/gcconfig.h: Add support for Darwin/ARM

2008-08-12  Geoff Norton  <gnorton@novell.com>

	* pthread_support.c: GCC shipped with SLES9 ppc gets confused with our current
	GC_setspecific define.  Unfold the define into a static inline on all platforms
	except ppc where it is a static leaf function.

2008-08-10  Zoltan Varga  <vargaz@gmail.com>

	* include/private/gc_locks.h: Add amd64 support so parallel mark works on
	amd64 too.

2008-08-05  Andreas Färber  <andreas.faerber@web.de>

	* autogen.sh: Suppress arguments warning for NOCONFIGURE.
	
	Contributed under MIT/X11 license.

2008-08-03  Zoltan Varga  <vargaz@gmail.com>

	* pthread_support.c (GC_thread_exit_proc): Null out the tls key to prevent the
	dtor function from being callled, since that would read freed memory.

2008-05-23  Massimiliano Mantione  <massi@ximian.com>
	* alloc.c: Moved emitting "GC_EVENT_START" and "GC_EVENT_END" events
	from "GC_maybe_gc" to "GC_try_to_collect_inner".

2008-05-19  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Add two variables for passing CPPFLAGS/CFLAGS from the parent
	configure.

2008-04-28  Kornél Pál  <kornelpal@gmail.com>

	* include/gc.h: Add GC_DllMain.
	* win32_threads.c: Rename DllMain to GC_DllMain.

	Contributed under MIT/X11 license.

2008-04-15  Jonathan Chambers  <joncham@gmail.com>