@@ -336,6 +336,13 @@ char *GC_parse_map_entry(char *buf_ptr, word *start, word *end,
   {
     extern ptr_t GC_find_limit();
 
+	if (GC_no_dls)
+		/* 
+		 * Not needed, avoids the SIGSEGV caused by GC_find_limit which
+		 * complicates debugging.
+		 */
+		return;
+
 #   ifdef LINUX
       /* Try the easy approaches first:	*/
       if ((ptr_t)__data_start != 0) {
@@ -1449,8 +1456,10 @@ void GC_register_data_segments()
 	/* hanging from it.  We're on thin ice here ...			*/
         extern caddr_t sbrk();
 
+	GC_ASSERT(DATASTART);
 	GC_add_roots_inner(DATASTART, (char *)sbrk(0), FALSE);
 #     else
+	GC_ASSERT(DATASTART);
 	GC_add_roots_inner(DATASTART, (char *)(DATAEND), FALSE);
 #       if defined(DATASTART2)
          GC_add_roots_inner(DATASTART2, (char *)(DATAEND2), FALSE);
